apps/neuvector/ithc/00/api-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nv-ingressroute-api
  namespace: neuvector
spec:
  routes:
  - match: HostSNI(`cft-neuvector00-api.ithc.platform.hmcts.net`)
    services:
    - name: neuvector-svc-controller-api
      port: 10443
  entryPoints:
    - websecure
    - web
  tls:
    passthrough: true
