apps/neuvector/ithc/00/ingress-route-patch.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nv-ingressroute
  namespace: neuvector
spec:
  routes:
  - match: HostSNI(`cft-neuvector00-multi-cluster.ithc.platform.hmcts.net`)
    services:
    - name: neuvector-svc-controller-fed-managed
      port: 10443
